0.171

- Periodically flush HTTP server and HTTP client logs.
- Fix HTTP client to preserve User-Agent when following redirects.
- Make following redirects configurable for HTTP client.
- Allow HTTP client to preserve Authorization when following redirects.
- Improve error message for unsupported key types in PEM reader.

0.170

- Improve error handling for HTTP client and HTTP server PEM files.
- Add additional columns to the HTTP client and server logs. The new columns
  provide detailed timing information for individual requests/responses.
- Update to Jetty 9.4.11.v20180605.

0.169

- Fix configuration error messages for prefixed configs.
- Add support for PEM encoded (PKCS #8) keystore and truststore to the
  HTTP client and server.
- Add avg to TimeDistribution stat.

0.168

- Update to Jetty 9.4.10.RC1.
- Add SSL session timeout and SSL session cache size config parameters
  to HTTP server.

0.167

- Add loadPublicKey to PemReader.

0.166

- Update to Guava 24.1 and Guice 4.2.
- Bind HttpServerConfig in TestingHttpServerModule to allow for HTTPS testing.

0.165

- Add log buffer size config to HTTP client.
- Add support for monitoring the logger queue size for HTTP client and server
- Allow disabling the compression of log files for HTTP client and server.

0.164

- Fix HTTP server log of trace tokens when using async responses.
- Do not require testing library when using ConfigAssertions.
- Add logging support to HTTP client. Logging is turned off by default
  and it can be enabled with the "http-client.log.enabled" config parameter.
- Add JmxGcMonitor to track GC events. GC events are logged,
  and aggregate time stats are published via JMX.
- Add MoreFutures.addSuccessCallback() methods.
- Make launcher compatible with Python 3.
- Add support for monitoring HTTP client/server connection stats.

* 0.163

- Add whenAnyCompleteCancelOthers for ListenableFuture.

* 0.162

- Fix shutdown of HTTP clients when lifecycle is stopped.